--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,7 +29,7 @@ jobs:
           retention-days: 30
       - name: Update file
         run: |
-          git add README.md
+          git add .
           git commit -m "Automated update at$(data)"
       - name: Push changes
         run: |
