--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,7 +6,7 @@ on:
     branches: [main, master]
   schedule:
     - cron: "*/1 * * * *"
-    
+
 jobs:
   test:
     timeout-minutes: 60
@@ -31,6 +31,8 @@ jobs:
       - name: Update file
         run: |
           git add .
+          git config --global user.email "npwh.panuchat@gmail.com"
+          git config --global user.name "npwh"
           git commit -m "Automated update at$(date)"
       - name: Push changes
         run: |
