--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -36,4 +36,4 @@ jobs:
           git commit -m "Automated update at$(date)"
       - name: Push changes
         run: |
-          git push origin master
+          git push origin main
