--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: auto update
+name: kuy update
 on:
   push:
     branches: [main, master]
@@ -33,7 +33,7 @@ jobs:
           git add .
           git config --global user.email "npwh.panuchat@gmail.com"
           git config --global user.name "npwh"
-          git commit -m "Automated update"
+          # git commit -m "Automated update"
       - name: Push changes
         run: |
           git push origin main
