--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,7 +33,7 @@ jobs:
           git config --global user.email "npwh.panuchat@gmail.com"
           git config --global user.name "npwh"
           git add .
-          # git commit -m "Automated update"
+          git commit -m "Automated update"
       - name: Push changes
         run: |
           git push origin main
