--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,6 +30,7 @@ jobs:
       #     retention-days: 30
       - name: Update file
         run: |
+          echo "Last update: $(date)" >> update-log.txt
           git config --global user.email "npwh.panuchat@gmail.com"
           git config --global user.name "npwh"
           git add .
