--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,12 +22,12 @@ jobs:
       #   run: npx playwright install --with-deps
       # - name: Run Playwright tests
       #   run: npx playwright test
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+      # - uses: actions/upload-artifact@v4
+      #   if: ${{ !cancelled() }}
+      #   with:
+      #     name: playwright-report
+      #     path: playwright-report/
+      #     retention-days: 30
       - name: Update file
         run: |
           echo "Last update: $(date)" >> update-log.txt
