--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: auto update
+name: auuuuuuto update
 on:
   push:
     branches: [main, master]
@@ -8,8 +8,7 @@ on:
     - cron: "*/1 * * * *"
 
 jobs:
-  test:
-    timeout-minutes: 60
+  update-repo:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -39,4 +38,4 @@ jobs:
         run: |
           git push origin main
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_NPWH }}
+          GITHUB_TOKEN: ${{ secrets.npwhhkk }}
