--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,7 +29,7 @@ jobs:
       #     retention-days: 30
       - name: Update file
         run: |
-          echo "Last update: $(date)" >> update-log.txt
+          # echo "Last update: $(date)" >> update-log.txt
           git config --global user.email "npwh.panuchat@gmail.com"
           git config --global user.name "npwh"
           git add .
@@ -37,5 +37,5 @@ jobs:
       - name: Push changes
         run: |
           git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.npwhhkk }}
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.npwhhkk }}
