--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,9 +4,9 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
-  schedule:
-    - cron: "*/1 * * * *"
-    - cron: "*/2 * * * *"
+  # schedule:
+  #   - cron: "*/1 * * * *"
+  #   - cron: "*/2 * * * *"
 
 jobs:
   update-repo:
